--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="">home</a>
             <a href="">about</a>
             <a href="">gallery</a>
-            <a href="h1.html">services</a>
+            <a href="index.html">services</a>
             <a href="">contacts</a>
         </div>
     </header>
