--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="h1.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header class="head">
@@ -14,7 +14,7 @@
             <a href="">home</a>
             <a href="">about</a>
             <a href="">gallery</a>
-            <a href="index.html">services</a>
+            <a href="h1.html">services</a>
             <a href="">contacts</a>
         </div>
     </header>
