--- a/index.html
+++ b/index.html
@@ -6,6 +6,120 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
+    *{
+    margin: 0px;
+    padding: 0px;
+    background-color: rgb(0, 0, 0);
+}
+
+.head{
+    width: 100%;
+    height: 90px;
+    border: 0px solid red;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* .head h1{
+    display: flex;
+    align-items: flex-end;
+} */
+.anchor a{
+    padding: 0px 30px;
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+    text-transform: uppercase;
+}
+.anchor a:hover{
+   color: rgb(178, 240, 10);
+}
+.quotes{
+    width: 45%;
+    height: 100px;
+    border: 0px solid red;
+    text-align: center;
+    margin: auto;
+    margin-top: 20px;
+    font-weight: 65px;
+    font-size: 45px;
+    color: white;
+}
+.love{
+    width: 35%;
+    height: 50px;
+    border: px solid red;
+    margin: auto;
+    margin-top: 10px;
+    text-align: center;
+    font-weight: 55px;
+    font-size: 19px;
+    color: rgb(229, 253, 10);
+ }
+ #available{
+    padding: 18px 60px;
+    font-size: 19px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    margin-top: 25px;
+    color: rgb(241, 12, 12);
+    background-color:rgb(23, 222, 56) ;
+    border-radius: 12px;
+    text-transform: uppercase;
+    border: none;
+ }
+ #available:hover{
+    background-color: #db0255d2;
+    color: #000;
+ }
+ .img{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: repeat(4,auto);
+    border: 3px solid rgb(253, 245, 2);
+    gap: 5px;
+    margin-top: 5px;
+    /* overflow: hidden; */
+ } 
+ img:hover{
+    transform: scale(1.8);
+ }
+ .img > div{
+    border: 1px solid rgb(19, 245, 57);
+    margin: 10px 10px;
+    overflow: hidden;
+}
+.img > div img{
+    width: 100%;
+    height: 227px; 
+    border-radius: 20px;
+    transition: transform 3s;
+} 
+
+.myfooter{
+    width: 100%;
+    height: 120px;
+    border: 2px solid rebeccapurple;
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+}
+#copy{
+    text-align: center;
+    font-size: 19px; 
+    color: white; 
+}
+body{
+    background-color: #000;
+}
+.myfooter #myname{
+    text-align: center;
+    color: white;
+}
 </head>
 <body>
     <header class="head">
